chore: add sqlc
