# apps/api/docs/swagger.json
@@ -18,9 +18,9 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/accounts": {
-            "get": {
-                "description": "get accounts",
+        "/register": {
+            "post": {
+                "description": "Register a new user account",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,16 +28,18 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "auth"
                 ],
-                "summary": "List accounts",
+                "summary": "Register a new user",
                 "parameters": [
                     {
-                        "type": "string",
-                        "format": "email",
-                        "description": "name search by q",
-                        "name": "q",
-                        "in": "query"
+                        "description": "Register request",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/users.RegisterRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -53,6 +55,22 @@
                     "500": {
                         "description": "Internal Server Error"
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "users.RegisterRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
