# apps/api/internal/database/user.sql.go
@@ -1,0 +1,44 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.31.1
+// source: user.sql
+
+package database
+
+import (
+	"context"
+)
+
+const createUser = `-- name: CreateUser :one
+INSERT INTO users (
+    userName, email, password, link
+) VALUES (
+    ?1, ?2, ?3, ?4
+) RETURNING id, username, email, link, password, created_at
+`
+
+type CreateUserParams struct {
+	Username string
+	Email    string
+	Password string
+	Link     string
+}
+
+func (q *Queries) CreateUser(ctx context.Context, arg CreateUserParams) (User, error) {
+	row := q.db.QueryRowContext(ctx, createUser,
+		arg.Username,
+		arg.Email,
+		arg.Password,
+		arg.Link,
+	)
+	var i User
+	err := row.Scan(
+		&i.ID,
+		&i.Username,
+		&i.Email,
+		&i.Link,
+		&i.Password,
+		&i.CreatedAt,
+	)
+	return i, err
+}
