# apps/api/internal/users/model.go
@@ -1,0 +1,8 @@
+package users
+
+
+type RegisterRequest struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+    Email    string `json:"email"`
+}
